tests/baselines/reference/override_js2(strict=true).errors.txt
a.js(2,10): error TS7006: Parameter 'v' implicitly has an 'any' type.
a.js(3,11): error TS7006: Parameter 'v' implicitly has an 'any' type.
a.js(7,5): error TS4119: This member must have a JSDoc comment with an '@override' tag because it overrides a member in the base class 'B'.
a.js(7,10): error TS7006: Parameter 'v' implicitly has an 'any' type.
a.js(9,11): error TS7006: Parameter 'v' implicitly has an 'any' type.
a.js(11,5): error TS4122: This member cannot have a JSDoc comment with an '@override' tag because it is not declared in the base class 'B'.
a.js(11,9): error TS7006: Parameter 'v' implicitly has an 'any' type.
a.js(17,5): error TS4121: This member cannot have a JSDoc comment with an '@override' tag because its containing class 'C' does not extend another class.
a.js(17,11): error TS7006: Parameter 'v' implicitly has an 'any' type.
a.js(19,5): error TS4121: This member cannot have a JSDoc comment with an '@override' tag because its containing class 'C' does not extend another class.
a.js(19,9): error TS7006: Parameter 'v' implicitly has an 'any' type.


==== a.js (11 errors) ====
    class B {
        foo (v) {}
             ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        fooo (v) {}
              ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    }
    
    class D extends B {
        foo (v) {}
        ~~~
!!! error TS4119: This member must have a JSDoc comment with an '@override' tag because it overrides a member in the base class 'B'.
             ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        /** @override */
        fooo (v) {}
              ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        /** @override */
        bar(v) {}
        ~~~
!!! error TS4122: This member cannot have a JSDoc comment with an '@override' tag because it is not declared in the base class 'B'.
            ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    }
    
    class C {
        foo () {}
        /** @override */
        fooo (v) {}
        ~~~~
!!! error TS4121: This member cannot have a JSDoc comment with an '@override' tag because its containing class 'C' does not extend another class.
              ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        /** @override */
        bar(v) {}
        ~~~
!!! error TS4121: This member cannot have a JSDoc comment with an '@override' tag because its containing class 'C' does not extend another class.
            ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    }